[gd_scene load_steps=6 format=2]

[ext_resource path="res://data/npcs/ellie.gd" type="Script" id=1]
[ext_resource path="res://data/npcs/Olga_animated_edit.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.213198, 1.00488, 0.338968 )

[node name="npc" type="StaticBody"]
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )

[node name="npc_mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.184989, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="npc_trigger" type="Area" parent="."]
transform = Transform( 1.01, 0, 0, 0, 1.01, 0, 0, 0, 1.01, 0, 0, 0 )
priority = 5.0

[node name="CollisionShape" type="CollisionShape" parent="npc_trigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10283, 0 )
shape = SubResource( 3 )

[node name="Olga_animated" parent="." instance=ExtResource( 3 )]

[node name="ui_anchor" type="Area2D" parent="."]

[node name="text" type="Label" parent="ui_anchor"]
margin_right = 40.0
margin_bottom = 14.0
text = "ELLIE"

[node name="tweens" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="tween_in" type="Tween" parent="tweens"]

[node name="tween_out" type="Tween" parent="tweens"]

[connection signal="input_event" from="npc_trigger" to="." method="_on_npc_trigger_input_event"]
[connection signal="mouse_entered" from="npc_trigger" to="." method="_on_npc_trigger_mouse_enter"]
[connection signal="mouse_exited" from="npc_trigger" to="." method="_on_npc_trigger_mouse_exit"]
[connection signal="tween_completed" from="tweens/tween_in" to="." method="_on_tween_in_tween_completed"]
[connection signal="tween_completed" from="tweens/tween_out" to="." method="_on_tween_out_tween_completed"]
